[dmi-plugin] Fix getResourceDataForPassthroughOperational endpoint
Get endpoint only accepts application/json.

Issue-ID: CPS-957
