# openapi/components.yml
@@ -1,3 +1,22 @@
+#  ============LICENSE_START=======================================================
+#  Copyright (C) 2021 Nordix Foundation
+#  Modifications Copyright (C) 2022 Bell Canada
+#  ================================================================================
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#        http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
+#  SPDX-License-Identifier: Apache-2.0
+#  ============LICENSE_END=========================================================
+
 components:
   schemas:
     ErrorMessage:
@@ -165,6 +184,14 @@ components:
       schema:
         type: string
         enum: [ application/json, application/yang-data+json ]
+
+    acceptParamInHeaderForRead:
+      name: accept
+      in: header
+      description: Accept parameter for response, if accept parameter is null, that means client can accept any format.
+      schema:
+        type: string
+        enum: [ application/json ]
 
     optionsParamInQuery:
       name: options
