# src/main/java/org/onap/cps/ncmp/dmi/rest/controller/DmiRestController.java
@@ -93,7 +93,6 @@ public class DmiRestController implements DmiPluginApi, DmiPluginInternalApi {
      * @param resourceIdentifier    resource identifier to fetch data
      * @param cmHandle              cm handle identifier
      * @param dataAccessRequest     data Access Request
-     * @param acceptParamInHeader   accept header parameter
      * @param optionsParamInQuery   options query parameter
      * @return {@code ResponseEntity} response entity
      */
@@ -102,12 +101,10 @@ public class DmiRestController implements DmiPluginApi, DmiPluginInternalApi {
                                                                    final String cmHandle,
                                                                    final @Valid DataAccessRequest
                                                                                 dataAccessRequest,
-                                                                   final String acceptParamInHeader,
                                                                    final @Valid String optionsParamInQuery) {
         if (isReadOperation(dataAccessRequest)) {
             final String resourceDataAsJson = dmiService.getResourceData(cmHandle,
                 resourceIdentifier,
-                acceptParamInHeader,
                 optionsParamInQuery,
                 DmiService.RESTCONF_CONTENT_PASSTHROUGH_OPERATIONAL_QUERY_PARAM);
             return ResponseEntity.ok(resourceDataAsJson);
@@ -120,13 +117,11 @@ public class DmiRestController implements DmiPluginApi, DmiPluginInternalApi {
                                                                final String cmHandle,
                                                                final @Valid DataAccessRequest
                                                                        dataAccessRequest,
-                                                               final String acceptParamInHeader,
                                                                final @Valid String optionsParamInQuery) {
         final String sdncResponse;
         if (isReadOperation(dataAccessRequest)) {
             sdncResponse = dmiService.getResourceData(cmHandle,
                 resourceIdentifier,
-                acceptParamInHeader,
                 optionsParamInQuery,
                 DmiService.RESTCONF_CONTENT_PASSTHROUGH_RUNNING_QUERY_PARAM);
         } else {
